[gd_scene load_steps=4 format=2]

[ext_resource path="res://stuff/air_lock.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 80 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 200, 80 )

[node name="AirLock" type="Node2D"]
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PoolVector2Array( -60, -160, -60, 0, 60, 0, 60, -160 )

[node name="DoorLeft" type="StaticBody2D" parent="."]
position = Vector2( -50, 0 )
collision_layer = 2
collision_mask = 4

[node name="Line2D" type="Line2D" parent="DoorLeft"]
points = PoolVector2Array( 0, -160, 0, 0 )
width = 20.0

[node name="Collider" type="CollisionShape2D" parent="DoorLeft"]
position = Vector2( 0, -80 )
shape = SubResource( 1 )

[node name="DoorRight" type="StaticBody2D" parent="."]
position = Vector2( 50, 0 )
collision_layer = 2
collision_mask = 4

[node name="Line2D" type="Line2D" parent="DoorRight"]
points = PoolVector2Array( 0, -160, 0, 0 )
width = 20.0

[node name="Collider" type="CollisionShape2D" parent="DoorRight"]
position = Vector2( 0, -80 )
shape = SubResource( 1 )

[node name="Left" type="Button" parent="."]
margin_left = -38.0
margin_top = -157.0
margin_right = -5.0
margin_bottom = -137.0
text = "left"

[node name="Right" type="Button" parent="."]
margin_left = -1.0
margin_top = -155.0
margin_right = 40.0
margin_bottom = -135.0
text = "right"

[node name="VacumOfSpace" type="Area2D" parent="."]
position = Vector2( 140, -80 )
collision_layer = 0
collision_mask = 4
gravity_vec = Vector2( 1, 0 )
gravity = 3000.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="VacumOfSpace"]
shape = SubResource( 2 )

[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
